--- a/sites/all/themes/slac/sass/components/_event-news-access-notice.scss
+++ b/sites/all/themes/slac/sass/components/_event-news-access-notice.scss
@@ -113,17 +113,45 @@
   }
 
   .general-left {
+    .pane-node-title {
+      margin-bottom: 1rem;
+    }
+
+    .pane-node-field-shared-byline {
+      width: 72%;
+      float: left;
+      margin-bottom: 0.625rem;
+      margin-right: 2rem;
+    }
+
     .panel-pane.pane-slac-ip-panes-email,
     .pane-slac-ip-panes-print {
+      padding-top: 0.2rem;
+    }
+
+    > .inside {
       position: relative;
-      top: -30px;
-      float: right;
-      margin-right: 5.938rem
+    }
+
+    .panel-pane.pane-slac-ip-panes-email {
+      position: absolute;
+      right: 70px;
+
+      a {
+        padding-right: 1rem;
+      }
     }
 
     .pane-slac-ip-panes-print {
-      top: -1.875rem;
-      margin-right: -12.5rem;
+      position: absolute;
+      right: 10px;
+      padding-left: 1rem;
+      padding-right: 0;
+
+      a {
+        padding-right: 0;
+        margin-right: 0;
+      }
     }
 
     .field-name-field-shared-image {
@@ -139,9 +167,11 @@
       }
     }
 
-    .field-name-field-shared-byline,
     .panel-pane.pane-node-created {
       margin-bottom: 0.625rem;
+      margin-top: 2rem;
+      display: block;
+      clear: both;
     }
   }
 
